[package]
name = "ross-firmware"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
alloc-cortex-m = "0.4.1"
panic-semihosting = "0.5.6"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]

[lib]
name = "ross_firmware"
path = "src/lib.rs"

[[bin]]
name = "ross-programmer-firmware"
path = "src/ross-programmer/bin.rs"
